[gd_scene load_steps=13 format=3 uid="uid://cd4v614bf8xtq"]

[ext_resource type="Script" uid="uid://3jl7knjggn1h" path="res://scripts/enemyHeavyShip.gd" id="1_xna0g"]
[ext_resource type="PackedScene" uid="uid://cwfggwa7a4rb7" path="res://assets/sprites/effects/enemyBullet.tscn" id="2_l1o7n"]
[ext_resource type="Texture2D" uid="uid://46iltrhr3krj" path="res://assets/sprites/Enemies/enemyHeavyShip.png" id="2_xna0g"]
[ext_resource type="Texture2D" uid="uid://bp74vmo60havy" path="res://assets/sprites/Enemies/enemyHeavyShield1.png" id="4_kvhf5"]
[ext_resource type="Texture2D" uid="uid://djntbodk5lawp" path="res://assets/sprites/Enemies/enemyHeavyShield2.png" id="5_t2mvw"]
[ext_resource type="AudioStream" uid="uid://dwk7hysodhulb" path="res://assets/sprites/effects/effectsSounds/enemyHSfireSound.wav" id="6_31dc2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 20.0
height = 68.0

[sub_resource type="Animation" id="Animation_t2mvw"]
resource_name = "fire"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(-15, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_31dc2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56n0a"]
_data = {
&"RESET": SubResource("Animation_31dc2"),
&"fire": SubResource("Animation_t2mvw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_31dc2"]
radius = 36.013885

[sub_resource type="CircleShape2D" id="CircleShape2D_56n0a"]
radius = 47.010635

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_xna0g")
bullet_scene = ExtResource("2_l1o7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(6, 0)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
rotation = 1.5707964
texture = ExtResource("2_xna0g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_56n0a")
}

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
position = Vector2(6, 0)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="ShootTime" type="Timer" parent="CharacterBody2D"]

[node name="shield" type="Area2D" parent="CharacterBody2D"]
position = Vector2(6, 0)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/shield"]
texture_filter = 3
texture = ExtResource("4_kvhf5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/shield"]
shape = SubResource("CircleShape2D_31dc2")

[node name="shield2" type="Area2D" parent="CharacterBody2D"]
position = Vector2(6, 0)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/shield2"]
texture_filter = 3
texture = ExtResource("5_t2mvw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/shield2"]
shape = SubResource("CircleShape2D_56n0a")

[node name="fireSound" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
stream = ExtResource("6_31dc2")

[connection signal="area_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_area_entered"]
[connection signal="timeout" from="CharacterBody2D/ShootTime" to="CharacterBody2D" method="_on_shoot_time_timeout"]
[connection signal="area_entered" from="CharacterBody2D/shield" to="CharacterBody2D" method="_on_shield_area_entered"]
[connection signal="area_entered" from="CharacterBody2D/shield2" to="CharacterBody2D" method="_on_shield_2_area_entered"]
